setting up you may also like section

--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -2,6 +2,11 @@
 {{ 'component-price.css' | asset_url | stylesheet_tag }}
 {{ 'component-rte.css' | asset_url | stylesheet_tag }}
 
+{% assign product_collection = section.settings.collection.products %}
+{% if section.settings.recommendations_instead_collection and product.metafields.custom.other-poroduct.value %}
+  {% assign product_collection = product.metafields.custom.other-poroduct.value %}
+{% endif %}
+
 <link rel="stylesheet" href="{{ 'component-slider.css' | asset_url }}" media="print" onload="this.media='all'">
 <link rel="stylesheet" href="{{ 'template-collection.css' | asset_url }}" media="print" onload="this.media='all'">
 {%- if section.settings.enable_quick_add -%}
@@ -90,7 +95,7 @@
         role="list"
         aria-label="{{ 'general.slider.name' | t }}"
       >
-        {%- for product in section.settings.collection.products limit: section.settings.products_to_show -%}
+        {%- for product in product_collection limit: section.settings.products_to_show -%}
           <li
             id="Slide-{{ section.id }}-{{ forloop.index }}"
             class="grid__item{% if show_mobile_slider or show_desktop_slider %} slider__slide{% endif %}"
@@ -197,7 +202,6 @@
       "label": "t:sections.featured-collection.settings.show_description.label",
       "default": false
     },
-     
     {
       "type": "select",
       "id": "description_style",
@@ -217,6 +221,12 @@
         }
       ],
       "default": "body"
+    },
+    {
+      "type": "checkbox",
+      "id": "recommendations_instead_collection",
+      "label": "t:sections.featured-collection.settings.recommendations_instead_collection.label",
+      "default": true
     },
     {
       "type": "collection",
