--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -56,6 +56,9 @@
       padding-top: {{ section.settings.padding_top }}px;
       padding-bottom: {{ section.settings.padding_bottom }}px;
     }
+    .template-search__header h1 {
+      font-size: 36px;
+    }
   }
 {%- endstyle -%}
 
