footer and cart updates

--- a/sections/footer-new.liquid
+++ b/sections/footer-new.liquid
@@ -283,6 +283,11 @@
             height: 14px;
         }
     }
+    body.index .footer.footer__section,
+    body.product .footer.footer__section,
+    body.shop .footer.footer__section {
+        border-top: none;
+    }
 </style>
 
 {% schema %}
