--- a/assets/base.css
+++ b/assets/base.css
@@ -2003,6 +2003,7 @@ input[type="checkbox"] {
   position: relative;
   width: calc(14rem / var(--font-body-scale) + var(--inputs-border-width) * 2);
   display: flex;
+  align-items: center;
   border-radius: var(--inputs-radius);
   min-height: calc((var(--inputs-border-width) * 2) + 4.5rem);
 }
