delete border on footer

--- a/sections/footer-new.liquid
+++ b/sections/footer-new.liquid
@@ -285,6 +285,11 @@
     }
     body.index .footer.footer__section,
     body.product .footer.footer__section,
+    body.cart .footer.footer__section,
+    body.contact .footer.footer__section,
+    body.shipping-returns .footer.footer__section,
+    body.stockists .footer.footer__section,
+    body.terms-of-use .footer.footer__section,
     body.shop .footer.footer__section {
         border-top: none;
     }
