--- a/sections/footer-new.liquid
+++ b/sections/footer-new.liquid
@@ -86,7 +86,7 @@
 <style>
     .footer.footer__section {
         background-color: #FFF;
-        border-top: 1px solid #E7E7E7;
+        /*border-top: 1px solid #E7E7E7;*/
     }
     .footer__wrapper {
         display: flex;
